moved the add-opens to JAVA_TOOL_OPTIONS